--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   "dependencies": {
     "@faker-js/faker": "^10.0.0",
     "@supabase/supabase-js": "^2.57.2",
-    "lucide-react": "^0.542.0"
+    "lucide": "^0.542.0"
   }
 }
